tests/semantic/pass/for-break-body.tiger
for a := 0 to 0 do
	break
