tests/semantic/fail/for-break-head-min.tiger
for a := (break; 0) to 0 do ()
